# cinema

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  biome.json  compose.yml  encode.sh  hls.py  package-lock.json  package.json  rsbuild.config.ts
.github/: dependabot.yml
.github/workflows/: backend.yml  cinema.yml  docker.yml  encode.yml  encoder.yml  frontend.yml  mqtt.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  errs.rs  main.rs  room.rs
backend/src/: errs.rs  main.rs  room.rs  watcher.rs
cinema/: Cargo.toml  Dockerfile  README.md  biome.json  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
cinema/backend/: main.rs  room.rs
cinema/frontend/: index.tsx  types.ts  utils.test.ts  utils.ts
cinema/frontend/components/: chat.tsx  hls_video.tsx  info.tsx  main_video.tsx  movie_list.tsx  movie_select_dialog.tsx  settings.tsx  viewer_list.tsx
cinema/frontend/providers/: room.tsx  server.tsx  settings.tsx
cinema/frontend/screens/: _root.tsx  login.tsx  room.tsx
cinema/frontend/static/: style.scss
encode/: .dockerignore  Dockerfile  pyproject.toml
encode/encode/: __main__.py  encoder.py  source.py  util.py
encoder/: Dockerfile  README.md  pyproject.toml
encoder/encoder/: __main__.py  cache.py  encoder.py  movie.py  moviedb.py  source.py  util.py
frontend/: .dockerignore  Dockerfile  README.md  biome.json  env.d.ts  package-lock.json  package.json  rsbuild.config.ts
frontend/.storybook/: main.ts  manager-head.html  preview.ts
frontend/components/: FontAwesomeIcon.tsx  chat.tsx  main_video.tsx  movie_list.tsx  settings.tsx
frontend/screens/: login.tsx  room.tsx
frontend/src/: cinema.d.ts  cinema.tsx  index.html  theatre.d.ts  theatre.tsx  types.ts  utils.ts
frontend/src/components/: chat-autocomplete.stories.tsx  chat-emoji-picker.stories.tsx  chat-messages.stories.tsx  chat.module.scss  chat.scss  chat.tsx  index.ts  info.tsx  main_video.module.scss  main_video.tsx  movie_list.tsx  movie_select_dialog.module.scss  movie_select_dialog.tsx  settings.tsx  username.tsx  viewer_list.module.scss  viewer_list.stories.tsx  viewer_list.tsx
frontend/src/components/chat/: Chat.tsx  ChatAutocomplete.stories.tsx  ChatEmojiPicker.stories.tsx  ChatMessages.stories.tsx
frontend/src/components/dialogs/: InfoDialog.module.scss  InfoDialog.stories.tsx  InfoDialog.tsx  MovieSelectDialog.module.scss  MovieSelectDialog.stories.tsx  MovieSelectDialog.tsx  SettingsDialog.module.scss  SettingsDialog.stories.tsx  SettingsDialog.tsx
frontend/src/components/user/: ViewerList.stories.tsx  ViewerList.tsx
frontend/src/components/video/: MainVideo.module.scss  MainVideo.stories.tsx  MainVideo.tsx
frontend/src/providers/: room.tsx  server.tsx  settings.tsx
frontend/src/screens/: _root.tsx  base.tsx  help.tsx  login.stories.tsx  login.tsx  room.tsx  root.tsx  settings.tsx
frontend/src/static/: Makefile  index.html  style.scss
frontend/src/static/icons/: CircleInfo.js  Gears.js  Pause.js  build.sh  index.js
frontend/static/: style.scss
mqtt/: Dockerfile
