[package]
name = "cinema_be"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cinema"
path = "backend/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = { version = "^4.5", features = ["derive"] }
globwalk = "^0.9.1"
json-patch = "*"
anyhow = "*"
tower = "0.5.2"
