[package]
name = "cinema_be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["ws"]}
axum-extra = { version = "0.3", features = ["spa"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = { version = "3.1.18", features = ["derive"] }
glob = "0.3"
json-patch = "*"