[project]
name = "encoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tqdm>=4.67.1",
]

[project.scripts]
encode = "encode.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "types-tqdm>=4.67.0.20250809",
]
