[project]
name = "encoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "inotify>=0.2.12",
    "tqdm>=4.67.1",
    "typed-argument-parser>=1.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "types-tqdm>=4.67.0.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
encoder = "encoder.__main__:main"

[tool.mypy]
disable_error_code = ["import-untyped"]
