[project]
name = "encoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "inotify>=0.2.12",
    "tqdm>=4.67.3",
    "typed-argument-parser>=1.12.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.15",
    "types-tqdm>=4.67.3.20260518",
]

[tool.uv]
package = true

[project.scripts]
encoder = "encoder.__main__:main"

[tool.mypy]
disable_error_code = ["import-untyped"]
